<resources>
    <string name="spinduration">200</string>
    <string name="map_key">AIzaSyDfhByTKuzkbT_oCKhp7YDB-hel3IPfQU8</string>
    <string name="app_name">Driver</string>
    <string name="google_app_id">your app id</string>
    <string name="loading">Loading...</string>
    <string name="duration_animation">200</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypepassword">Retype Password</string>
    <string name="submit">SUBMIT</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="invalidemailid">Please enter valid email id</string>
    <string name="mobileno">Mobile Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="job"> Accept new job</string>
    <string name="title_activity_forgot">Forgot Password</string>
    <string name="settings">BACK TO SETTINGS</string>
    <string name="forgotpasswordins">Enter your email address and \nwe\'ll send you a link to reset\n your password</string>
    <string name="title_activity_createpassword">Create new password</string>
    <string name="changepassword">Change Password</string>
    <string name="createnewpassword">Create a New Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="tvjobs"> Jobs</string>
    <string name="btncurrent">Current</string>
    <string name="btnpast">Past</string>
    <string name="tvnewjobs">New Job</string>
    <string name="btndetails">Detail</string>
    <string name="btnaccept">Accept</string>
    <string name="btndecline">Decline</string>
    <string name="edittextsource1">North Carolina</string>
    <string name="checkboxcompleted">Completed</string>
    <string name="txtdollar">Dollar</string>
    <string name="tvcurrentjobs">Current Job</string>
    <string name="tvdeliveredjobs">Delivered</string>
    <string name="tvtransit">In Transit</string>
    <string name="tvnumber">OD1-1024</string>
    <string name="btnmessage">Message</string>
    <string name="btndirections">Direction</string>
    <string name="txtdetails">Details</string>
    <string name="txtmessage">Message</string>
    <string name="btnsignout">Sign out</string>
    <string name="txtsave"> Save</string>
    <string name="tvsettings"> Settings</string>
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Help</item>

    </string-array>
    <string name="notification">Notification</string>
    <string name="title_joblist">JobList</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_aboutus">About</string>
    <string name="title_help">HELP</string>
    <string name="title_map">Map</string>
    <string name="getintouchwithus">Get In Touch With Us</string>
    <string name="logoutconf">Do you wish to logout from the app?</string>
    <string name="deleteaccountconf">Are you sure want to delete this account?</string>
    <string name="btnstatus">status</string>
    <string name="pending">Pending</string>
    <string name="intransit">In Transit</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Completed</string>
    <string name="trucktype">  Truck Type</string>
    <string name="pickupdt">  Pickup Date and Time</string>
    <string name="deliverydt">  Delivery Date and Time</string>
    <string name="notes">  Notes (optional)</string>
    <string name="additionalservices">  Additional Services</string>
    <string name="booknow">Book Now</string>
    <string name="total">Total</string>
    <string name="viewdetails">View Details</string>
    <string name="includes">(Includes applicable surcharges)</string>
    <string name="selecttrucktype">  53 ft.Dry Van local drayage</string>
    <string name="ddmmyyyy"> MM/DD/YYYY</string>
    <string name="ddmmyyyy2"> MM/DD/YYYY</string>
    <string name="time"> 00:00 </string>
    <string name="time2"> 00:00 Hrs</string>
    <string name="source">Pick up address</string>
    <string name="destination">North Carolina</string>
    <string name="status">Status</string>
    <string name="btnmsg">Message</string>
    <string name="btnreceive">Received</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="error_alert">Something went wrong with error handler</string>
    <string name="error_alert_title">Driver Error</string>
    <string name="title_activity_number_verification">NumberVerification</string>
    <string name="title_activity_change_mobile_number">ChangeMobileNumber</string>
    <string name="title_activity_current_job">CurrentJob</string>
    <string name="title_activity_delivered_job">Delivered Job</string>
    <string name="title_activity_settings"> Settings</string>
    <string name="title_activity_newjob"> New Job</string>
    <string name="title_activity_notification"> Notification</string>
    <string name="selectimage">Choose Image</string>
    <string name="takefromcamera">Take Photo</string>
    <string name="takefromgallery">Choose from gallery</string>
    <string name="email_error">Please enter your email id.</string>
    <string name="password_error">Please enter your password.</string>
    <string name="title_activity_add_card">AddCard</string>
    <string name="title_activity_verify_mobile_number">VerifyMobileNumber</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="edit" />
    <string name="save" />
    <string name="signup" />
    <string name="Acceptnewjob">Accept New Jobs</string>
    <string name="insurancedoc">Insurance document</string>
    <string name="btnsource"> North</string>
    <string name="btnclose">Close</string>
    <string name="details" />
    <string name="message" />
    <string name="directions" />
    <string name="message1">Message1</string>
    <string name="message2">Message2</string>
    <string name="send">Send</string>
    <string name="close">close</string>
    <string name="fragmentdetails" />
    <string name="title">Sample Title</string>
    <string name="content">This is a Sample text will be replaced by original text.This is a Sample text will be replaced by original text.This is a Sample text will be replaced by original text.This is a Sample text will be replaced by original text.</string>
    <string name="message5">This is Sample text,It ll replaced by the Original text</string>
    <string name="title_driver" />
    <string name="Details">Details</string>
    <string name="btndocuments">  Add Documents</string>
    <string name="btntotal"> </string>
    <string name="ddmmyyyy1">mm/dd/yyyy</string>
    <string name="title_home">JOBS</string>
    <string name="txt_status">Status</string>
    <string name="text">Text</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string-array name="additional_services">
        <item>Toll Charge</item>
        <item>Weight Fine</item>
        <item>Yard Storage</item>
        <item>Reweighing</item>
        <item>Lumper Charge</item>
        <item>PowerUsage Hours</item>
        <item>LayOverWeekday</item>
        <item>LayOverSolo</item>
    </string-array>
    <string name="verify">Verify Mobile</string>
    <string name="enterverificationcode">Please enter your verification code </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="del">del</string>
    <string name="resend">Resend</string>
    <string name="changenumber">Change Number</string>
    <string name="accessories">Accessories</string>
    <string name="btn_driverenroute">Driver Enroute</string>
    <string name="btn_driver_arriving">Driver Arriving Now</string>
    <string name="btn_on_transit">On_transit</string>
    <string name="btn_delivered">Delivered</string>
    <string name="btn_cancelled">Cancelled</string>
    <string name="border">Border Crossing</string>
    <string name="noofstraps">No Of Straps</string>
    <string name="stopsintransit">Stop In Transit</string>
    <string name="hazardous">HazardousMaterial</string>
    <string name="btn_close">Close</string>
    <string name="tvcancelledjobs">Cancelled</string>
    <string name="title_trucker">Trucker</string>
    <string name="textalert">Text</string>
    <string name="call">Call</string>
    <string name="contact">Contact</string>
    <string name="contactalert">How would you wish to contact your shipper?</string>
    <string name="text1">ODI-</string>
    <string name="dollar">$</string>
    <string name="hrs">Hrs</string>
    <string name="btn_shipperservice">Shipper Service</string>
    <string name="backtosignin">Back to sign in</string>
    <string name="txt_save">Save</string>
    <string name="add_service">Add Additional Services</string>
    <string name="date">Date</string>
    <string name="id">Id</string>
    <string name="BorderCross">Border Crossing fee</string>
    <string name="NoStraps">No of Straps</string>
    <string name="Stopintransit">Stop in transit</string>
    <string name="Hazadarous">HazardousMaterial</string>
    <string name="Redelivery">Redelivery Charge</string>
    <string name="TeamService">TeamService</string>
    <string name="doc1">Image1</string>
    <string name="teamservice">TeamService</string>
    <string name="redeliverycharge">RedeliveryCharge</string>
    <string name="test">Test</string>
    <string name="redelivery">Redelivery</string>
    <string name="alert">Alert</string>
    <string name="type_your_message_here_">Type message here</string>
    <string name="tvviewdetails">View Details</string>
    <string name="view_distance">Total Distance</string>
    <string name="rpmcharge">RPM Charge</string>
    <string name="view_surcharges">Surcharges</string>
    <string name="view_totalshipment">Total Shipment Amount</string>
    <string name="txt_pickdate">Pickup Date</string>
    <string name="txt_picktime">Pickup Time</string>
    <string name="pickdate_value">544545</string>
    <string name="picktime_value">547588</string>
    <string name="txt_deliverydate">Delivery Date</string>
    <string name="txt_deliverytime">Delivery Time</string>
    <string name="type_your_message">Type your message</string>
    <string name="Cancel">Cancel</string>
    <string name="txt_imageonly">(Images only)</string>
    <string name="gcm_defaultSenderId">543023108033</string>
    <string name="LayOverweekdays">LayoverWeekday</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="ongoing">Ongoing</string>
    <string name="newjob">New</string>
    <string name="number">number</string>
    <string name="service">Service</string>
    <string name="value">Value</string>
    <string name="value1">Value1</string>
    <string name="txt_content">Please select service</string>
    <string name="btnokdialog">OK</string>
</resources>