<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_close"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="right"
        android:hint="@string/btn_close"
        android:layout_marginRight="@dimen/_10sdp"
        android:textColorHint="@color/white"
        android:background="@color/redmenu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_50sdp">

        <Button
            android:id="@+id/btn_driver_enroute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/redmenu"
            android:hint="@string/btn_driverenroute"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp" />


        <Button
            android:id="@+id/btn_driver_arriving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/redmenu"
            android:hint="@string/btn_driver_arriving"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp" />


        <Button
            android:id="@+id/btn_on_transit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/redmenu"
            android:hint="@string/btn_on_transit"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp" />


        <Button
            android:id="@+id/btn_delivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/redmenu"
            android:hint="@string/btn_delivered"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp" />


        <Button
            android:id="@+id/btn_cancelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/redmenu"
            android:hint="@string/btn_cancelled"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


</LinearLayout>