<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/verify_rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentTop="true"
        android:background="@color/red"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/verify_txt_backicon"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/backarrow" />

        <TextView
            android:id="@+id/verify_txt_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/extralarge" />

        <TextView
            android:id="@+id/verify_txt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/extralarge" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/verify_ll_footer"
        android:layout_below="@+id/verify_rl_header"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/verify_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enterverificationcode"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/extralarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/verify_txt_one"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/whitecircle" />

                <TextView
                    android:id="@+id/verify_txt_two"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/whitecircle" />

                <TextView
                    android:id="@+id/verify_txt_three"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/whitecircle" />

                <TextView
                    android:id="@+id/verify_txt_four"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:background="@drawable/whitecircle" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/verify_btn_one"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/one"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />

                <Button
                    android:id="@+id/verify_btn_two"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/two"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />


                <Button
                    android:id="@+id/verify_btn_three"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/three"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/verify_btn_four"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/four"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />

                <Button
                    android:id="@+id/verify_btn_five"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/five"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />


                <Button
                    android:id="@+id/verify_btn_six"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/six"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/verify_btn_seven"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/seven"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />

                <Button
                    android:id="@+id/verify_btn_eight"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/eight"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />


                <Button
                    android:id="@+id/verify_btn_nine"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/nine"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/seven"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge"
                    android:visibility="invisible" />


                <Button
                    android:id="@+id/verify_btn_zero"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/zero"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />


                <Button
                    android:id="@+id/verify_btn_del"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:background="@drawable/whitecirclebackground"
                    android:text="@string/del"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/extralarge" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/verify_ll_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/verify_btn_resend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btnbackground"
            android:gravity="center"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/extralarge" />

        <Button
            android:id="@+id/verify_btn_changenumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/redbtnbackground"
            android:gravity="center"
            android:text="@string/changenumber"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/extralarge" />
    </LinearLayout>
</RelativeLayout>
